--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 服务启动说明：
 
-	修改etc下的配置文件，把setting.json-dest修改为setting.json.
+	修改etc下的配置文件，把setting.json-dist修改为setting.json.
 	打开setting.json文件修改里面的服务地址即可
 	
 	启动服务 node convertor-server.js
