--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-°²×°²½Öè£º
+å®‰è£…æ­¥éª¤ï¼š
 
-1£¬°²×°ÒÀÀµÈí¼ş°ü¡£
+1ï¼Œå®‰è£…ä¾èµ–è½¯ä»¶åŒ…ã€‚
     
     npm install -d
     
-2£¬ĞŞ¸ÄÅäÖÃÎÄ¼ş
+2ï¼Œä¿®æ”¹é…ç½®æ–‡ä»¶
 
-		ĞŞ¸ÄetcÏÂµÄÅäÖÃÎÄ¼ş£¬°Ñsetting.json-distĞŞ¸ÄÎªsetting.json.
-		´ò¿ªsetting.jsonÎÄ¼şĞŞ¸ÄÀïÃæµÄ·şÎñµØÖ·¼°¶Ë¿Ú¼´¿É
+		ä¿®æ”¹etcä¸‹çš„é…ç½®æ–‡ä»¶ï¼ŒæŠŠsetting.json-distä¿®æ”¹ä¸ºsetting.json.
+		æ‰“å¼€setting.jsonæ–‡ä»¶ä¿®æ”¹é‡Œé¢çš„æœåŠ¡åœ°å€åŠç«¯å£å³å¯
 	
-3. Æô¶¯·şÎñ 
+3. å¯åŠ¨æœåŠ¡ 
 	
 		node convertor-server.js
